--- a/src/app/claim-list/claim-list.component.css
+++ b/src/app/claim-list/claim-list.component.css
@@ -1,23 +1,22 @@
 .container {
-    padding: 24px;
-    display: flex;
-    justify-content: center;
-    background-color: white;
-  }
-  
-  table {
-    width: 100%;
-    max-width: 1000px;
-    background-color: white;
-    border-radius: 12px;
-    overflow: hidden;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1), 0px 2px 16px rgba(0, 0, 0, 0.1); 
-  }
-  
-  .example-button-row-list{
+  padding: 24px;
+}
+
+.search-container {
   display: flex;
-justify-content: flex-start;
-margin-left: 15px;
-margin-top: 15px;
-  }
- 
+  gap: 16px;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.full-width-table {
+  width: 100%;
+  overflow-x: auto;
+}
+
+.example-button-row-list{
+  display: flex;
+  margin-left: 20px;
+  margin-top: 20px;
+}
